{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 21,
  "lineage": "8c78c1e6-6ae4-7997-c657-d81b97787095",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199ac7c9fbf9ed83",
            "arn": "arn:aws:ec2:ap-south-2:238788379449:instance/i-016cfc54ad23f933b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016cfc54ad23f933b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09c6b3d5f9c5cff3f"
              }
            ],
            "primary_network_interface_id": "eni-09c6b3d5f9c5cff3f",
            "private_dns": "ip-10-0-0-117.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.117",
            "public_dns": "ec2-16-112-61-17.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.112.61.17",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040e199af8ed337c8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffdb4b50ad9f09c1",
            "tags": {
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Name": "WebServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09801a173c49c7b87"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "i-016cfc54ad23f933b",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199ac7c9fbf9ed83",
            "arn": "arn:aws:ec2:ap-south-2:238788379449:instance/i-0fbc4a343fb76623c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbc4a343fb76623c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d5f4cd949e95c52e"
              }
            ],
            "primary_network_interface_id": "eni-0d5f4cd949e95c52e",
            "private_dns": "ip-10-0-1-10.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-16-112-8-254.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.112.8.254",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b72a017b17934a7e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051a2c270a82dd0a9",
            "tags": {
              "Name": "WebServer-2"
            },
            "tags_all": {
              "Name": "WebServer-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09801a173c49c7b87"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "i-0fbc4a343fb76623c",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:internet-gateway/igw-0c07a9e81ca5f9c32",
            "id": "igw-0c07a9e81ca5f9c32",
            "owner_id": "238788379449",
            "region": "ap-south-2",
            "tags": {
              "Name": "MyProject-IGW"
            },
            "tags_all": {
              "Name": "MyProject-IGW"
            },
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "igw-0c07a9e81ca5f9c32",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:loadbalancer/app/my-project-alb/4b4cf13c98ecf976",
            "arn_suffix": "app/my-project-alb/4b4cf13c98ecf976",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-project-alb-1751020946.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:loadbalancer/app/my-project-alb/4b4cf13c98ecf976",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-project-alb",
            "preserve_host_header": false,
            "region": "ap-south-2",
            "security_groups": [
              "sg-09801a173c49c7b87"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051a2c270a82dd0a9"
              },
              {
                "subnet_id": "subnet-0ffdb4b50ad9f09c1"
              }
            ],
            "subnets": [
              "subnet-051a2c270a82dd0a9",
              "subnet-0ffdb4b50ad9f09c1"
            ],
            "tags": {
              "Name": "MyProject-ALB"
            },
            "tags_all": {
              "Name": "MyProject-ALB"
            },
            "vpc_id": "vpc-01711a9538b2db390",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:loadbalancer/app/my-project-alb/4b4cf13c98ecf976"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:listener/app/my-project-alb/4b4cf13c98ecf976/a663b3e1ba57b3b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:listener/app/my-project-alb/4b4cf13c98ecf976/a663b3e1ba57b3b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:loadbalancer/app/my-project-alb/4b4cf13c98ecf976",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:listener/app/my-project-alb/4b4cf13c98ecf976/a663b3e1ba57b3b4"
          },
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_tg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "arn_suffix": "targetgroup/my-project-tg/9055852d8a22db53",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53,i-016cfc54ad23f933b,80",
            "port": 80,
            "region": "ap-south-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "target_id": "i-016cfc54ad23f933b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "port": 80,
            "region": "ap-south-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "target_id": "i-016cfc54ad23f933b"
          },
          "dependencies": [
            "aws_instance.web_server_1",
            "aws_lb_target_group.my_tg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53,i-0fbc4a343fb76623c,80",
            "port": 80,
            "region": "ap-south-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "target_id": "i-0fbc4a343fb76623c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "port": 80,
            "region": "ap-south-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:238788379449:targetgroup/my-project-tg/9055852d8a22db53",
            "target_id": "i-0fbc4a343fb76623c"
          },
          "dependencies": [
            "aws_instance.web_server_2",
            "aws_lb_target_group.my_tg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:route-table/rtb-06bf96518502cfb5e",
            "id": "rtb-06bf96518502cfb5e",
            "owner_id": "238788379449",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c07a9e81ca5f9c32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "rtb-06bf96518502cfb5e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849a724edc20c623",
            "region": "ap-south-2",
            "route_table_id": "rtb-06bf96518502cfb5e",
            "subnet_id": "subnet-0ffdb4b50ad9f09c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "rtbassoc-0849a724edc20c623",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b5eb87011e2268",
            "region": "ap-south-2",
            "route_table_id": "rtb-06bf96518502cfb5e",
            "subnet_id": "subnet-051a2c270a82dd0a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "rtbassoc-084b5eb87011e2268",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:security-group/sg-09801a173c49c7b87",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09801a173c49c7b87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "238788379449",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-Traffic-SG"
            },
            "tags_all": {
              "Name": "Web-Traffic-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "sg-09801a173c49c7b87",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:subnet/subnet-0ffdb4b50ad9f09c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffdb4b50ad9f09c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238788379449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "subnet-0ffdb4b50ad9f09c1",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:subnet/subnet-051a2c270a82dd0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a2c270a82dd0a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238788379449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-01711a9538b2db390"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "subnet-051a2c270a82dd0a9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:238788379449:vpc/vpc-01711a9538b2db390",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c44a03ebfa8015e2",
            "default_route_table_id": "rtb-07658d275f53f69b2",
            "default_security_group_id": "sg-00a121d74d1677bee",
            "dhcp_options_id": "dopt-01f89a6d4cf8b6ae1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01711a9538b2db390",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07658d275f53f69b2",
            "owner_id": "238788379449",
            "region": "ap-south-2",
            "tags": {
              "Name": "MyProject-VPC"
            },
            "tags_all": {
              "Name": "MyProject-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238788379449",
            "id": "vpc-01711a9538b2db390",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}